--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -108,6 +108,8 @@
 \nobibliography*
 
 \include{chapter1}
+\include{chapter2}
+\include{chapter3}
 % ... and so on
 
 % These commands fix an odd problem in which the bibliography line
