--- a/dissertation/preliminaries.tex
+++ b/dissertation/preliminaries.tex
@@ -114,7 +114,8 @@
 
 \textbf{REFEREED JOURNAL PUBLICATIONS}
 
-  \mypubentry{Ground-breaking article}{2012}{Journal name}
+  \bibentry{Yang2016}
+  \bibentry{Qiu2015}
 
 \vspace{12pt}
 \textbf{REFEREED CONFERENCE PUBLICATIONS}
@@ -125,9 +126,13 @@
 \vspace{12pt}
 \textbf{SOFTWARE}
 
-  \mysoftentry{Magical tool}{http://your.url.here/}
-  {C++ algorithm that solves TSP in polynomial time.}
-
+  \mysoftentry{nanoIV}{https://github.com/tphinkle/nanoIV}
+  {Keithley 6487 Picoammeter control GUI program. Allows measurement of current-voltage and time-series data.}
+  
+  \mysoftentry{pore stats}{https://github.com/tphinkle/pore_stats}
+  {GUI program and Python library for extracting and analyzing resistive pulse data.}
+  
+  
 }
 
 % The abstract should not be over 350 words, although that's
