--- a/dissertation/chapter1.tex
+++ b/dissertation/chapter1.tex
@@ -133,6 +133,10 @@
 			\end{equation}
 	
 			where $\vec{J_{i}}$ is the ion flux of species $i$, $D$ is the diffusion coefficient, $c$ is the ion concentration, $z$ is the ion valence, $e$ is the elementary charge, $k_{B}$ is the Boltzmann constant, $T$ is the temperature, nad $\phi$ is the electric potential. The first term in eq. \ref{eq:pnp} is the diffusion term, which essentially states that there is a flux of ions in the opposite direction of the gradient of the ion concentration. The second term is the advective term, which accounts for the ions moving with the fluid solvent. The final term is the electric migration term, which describes the motion of the ions in an electric field gradient. 
+			
+			
+			
+			
 		\subsection{The diffuse layer---Poisson-Boltzmann equation}
 			
 			The diffuse layer is of paramount importance in nanopore studies; without it, nanopores would simply act as passive conductors with no interesting conductance properties. When any type of material is submitted in solution, charges tend to appear at the surface. Some of these charges are due to specific adsorption or immobilization of ions or molecules onto the surface, which give the surface some charge. The other charge type which is usually more significant is due to the ionization of chemical groups native to the surface of the pore. The type of chemical group present on the pore depends on the material out of which the pore is made. For instance, polymer pores prepared via the track-etch technique are formed when an etchant solution cleaves the monomer units in half, exposing a carboxyl group, which is then deprotonated at basic solution pHs. On average there are approximately 1 of these surface groups per $\SI{4}{nm}^{2}$, yielding a net surface charge density of $0.25~\mathrm{e}/\mathrm{nm}^{2}$. In any case, the total charge that mobile ions `feel' in the solution is the sum of the adsorbed charges (Stern layer), plus the chemical groups attached to the surface, plus the immobilized ions within the slip layer. The electric potential immediately outside the Stern layer due to these superimposed charged sources is known as the $\zeta$ potential.
@@ -203,12 +207,57 @@
 				\end{split}				
 			\end{equation}
 			
+			\begin{figure}
+				\includegraphics[width=\textwidth]{EDL_Charge_Distribution.png}
+				\caption{\textbf{Ion concentrations adjacent to a negatively charged surface according to the Debye-Huckel theory.} The plot reveals that the counterion concentration (blue) is enhanced near the wall, and decays approximately exponentially as distance from the wall increases. Oppositely, coions (red) are diminished near the wall, and rise to their bulk value with distance from the wall. The \textit{total} ion concentration at the pore surface is slightly higher than the total ion concentration in the bulk. The space charge density $\rho_{E}\propto\left[c_{+}\left(y\right)-c_{-}\left(y\right)\right]$ is non-zero near the wall, and decays to zero in the bulk.}
+				\label{fig:EDLChargeDistribution}
+			\end{figure}
+
+			
 			where we introduced a new parameter, the Debye length $\lambda_{D}$. The solution to the 1-D lineared Poisson-Boltzmann equation reveals that the electrostatic potential exponentially approaches 0 from the wall, that the counterion species are enriched at the surface and diminish towards the bulk, and the coions are diminished at the surface, but recover their concentration towards the bulk. The Debye length is perhaps the most useful parameter in nanopore systems since it gives a characteristic length scale for the region within the pore wall that departs from its bulk, ordinary behavior. The Debye length increases with dilute ion concentrations and decreases as the ion concentration is increased, and is typically somewhere in the range of $0.1-10$ nm for common solution preparations. Note that although we discussed the electrical double layer here in the context of a pore surface, nearly every body immersed in solution will have some surface charge and therefore its own electrical double layer. The electrical double layers of free-bodies i.e.~particles are integral in explaining their motion in applied electrical fields, also known as electrophoresis. 
 			
 			The importance of the EDL in bestowing nanopores with their novel conductance properties cannot be overstated, and accordingly there are many phenomenon that nanopores that exhibit that are a direct consequence of the present of the EDL. In the next few sections we will review some of these phenomena.
 			
 			
-		\subsection{Surface conductance}
+		\subsection{Electroosmosis}
+			
+			Ions migrate in externally applied electric fields, and ions of opposite polarity travel in opposite directions. When ions move, they tend to drag fluid along with them. In the bulk, this fact results in no net motion of fluid because for every anion that drags fluid towards the cathode, there is a cation that drags fluid towards the anode, and the two motions cancel each other out so that there is no net motion of fluid. However, as we've just learned there \textit{is} a net concentration of one ion polarity in the EDL, so we expect that an electric field applied parallel to a charged surface will induce motion of the fluid. This intuition turns out to be correct, and the effect is known as electroosmosis. Interestingly, although the effect originates due to the presence of the $\sim \SI{1}{nm}-$thick EDL, the induced fluid flow propogates well into the bulk, and electroosmosis is observable in micro- and even milli-sized systems. This result, while surprising, is due to the simple viscous coupling of the fluid at the EDL surface to the rest of the fluid.
+			
+			Because electroosmosis induces a general fluid flow, the effect couples with the motion of all unbound actors in the system, namely the ions species and any particles suspended in the solution. In typical nanopores, convection in the electroosmotic flow tends to be less pronounced than migration in the electric field. However, some lightly charged particles for instance will only experience a small force from the electric field (electrophoresis) compared to the drag force from the fluid moving electroosmotically, and their motion is therefore determined primarily by electroosmosis. For the case of ions, usually the electroosmotic convective velocity adds or subtracts only a small offset to their net total motion, which remains dominated by electrophoresis. However, recently it was shown that some types of channels exhibit frictionless flow of water, and in these cases the electroosmotic velocities can become very large. In these channels it is actually expected that electroosmotic offers a large, if not dominant contribution to the motion of ions in the system. One example of these special types of pores, carbon nanotube pores, will be discussed later in this dissertation.
+			
+			To understand electroosmosis, we look to the Navier-Stokes equations which describe the motion of fluids, and the Poisson-Boltzmann equation which yields the distribution of ions in the vicinity of the EDL. As an example, consider again an infinite charged plane with unit normal pointing in the $\hat{y}-$ direction, but this time with a constant electric field $\vec{E}$ applied parallel to its surface. The Navier-Stokes equation (eq \ref{eq:ns}) simplifies greatly in this case, and simply becomes
+			
+			\[ 0 = \eta\frac{\partial^{2}u}{\partial y^{2}}+\left[c_{+}\left(y\right)-c_{-}\left(y\right)\right]zeE_{ext}. \]
+			
+			The equation shows that there is a momentum flux source term from the electric field acting on the charged solution in the EDL, which is proportional to the net charge in the solution (proportional to $c_{+}-c_{-}$) times the electric field $\vec{E}$. The other term that balances the driving force is due to viscous forces between neighboring layers that have different $y-$ velocities $u$, i.e. due to velocity gradients perpendicular to the wall. In order to solve this equation, we can replace the charge density $\rho_{E}=ze\left(c_{+}-c_{-}\right)$ with the Laplacian of the scalar potential $\phi$, integrate twice, and apply the correct boundary conditions, that the velocity at the pore wall is 0 (the so-called `non-slip' boundary condition) and that the velocity gradients are 0 infinitely far from the wall.  Performing these steps, we find the fluid velocity equals 
+			
+			\[ u=\frac{\epsilon E_{ext}}{\eta}\left(\phi-\zeta\right), \]
+			
+			where $\phi_{0}$ is the electric potential immediately outside the surface charges on the pore wall. Interestingly, according to this equation the fluid velocity is proportional to the local electric potential in the screening layer, which is determined by solving the Poisson-Boltzmann equation (Eq. \ref{eq:pb}). Under the Debye-H\u ckel approximation of small surface potentials, the fluid velocity is zero at the walls, and exponentially approaches its bulk value as distance from the wall increases. This type of fluid flow profile is known as `plug flow', since the velocity is approximately constant everywhere except in the thin EDL where there are sharp velocity gradients. Since the potential in the bulk is equal to $\phi=0$, we find the bulk velocity to be equal to 
+			
+			\begin{equation} \label{eq:hs}
+				\begin{split}
+					u &= -\frac{\epsilon\zeta}{\eta}E_{ext} \\
+					u &= \mu_{EO}E_{ext},
+				\end{split}
+			\end{equation}
+			
+			
+
+			
+			a result known as the Helmholtz-Smoluchowski equation. The parameter $\mu_{EO}\equiv-\frac{\epsilon\zeta}{\eta}$ introduced is known as the electroosmotic mobility, and is the proportionality constant between the applied electrical field and the resulting fluid velocity. Typical values of the mobility are $\mu_{EO}=10^{-8} \left[m^{2}/V s\right]$, which for an electric field of $\SI{1}{V/\mu m^{2}}$ yields a fluid velocity of approximately $\SI{1}{cm/s}$. 
+			
+			\begin{figure}
+				\includegraphics[width=.5\textwidth]{electroosmosis.png}
+				\caption{\textbf{Plot of electroosmotic flow along an infinite plane with finite slip length}. A net ion charge at the surface experiences a force in an electric field which drags fluid along with it. The force is only present in the electrical double layer, which viscously couples to the rest of the fluid. This fluid flow profile is known as plug flow, and extends far beyond the EDL where it originates.}
+				\label{fig:electroosmosis}
+			\end{figure}
+			
+			Figure \ref{fig:electroosmosis} shows the fluid flow profile in a pore with a finite slip length $u_{\mathrm{slip}}$; however, it must be noted that in the vast majority of experimental systems, $u_{\mathrm{slip}}=0$.
+			
+			It is possible to experimentally observe the fluid flow velocity, for instance by tracking the motion of small particles that move in the fluid flow, and therefore Eq. \ref{eq:hs} provides a means for directly measuring the $\zeta-$potential.
+			
+		\subsection{Surface conductance and conductance saturation}
 		
 			\begin{figure} 
 				\includegraphics[width=0.5\textwidth]{Schoch2008_conductance}
@@ -216,23 +265,15 @@
 				\label{fig:Schoch2008conductance}
 			\end{figure}
 		
-			Ignoring electrical double layer effects, the conductance of an ion channel is proportional to the ion concentration in the solution; doubling the ion concentration doubles the measured current. However, because the electrical double layer has a total concentration that is significantly different than the bulk concentration of ions, the conductance of a nanopore is a highly non-linear function of the bulk ion concentration. Consider first a nanopore with an electrical double layer very small compared to the pore radius; the conductance is related to the conductivity to the bulk solution. As we reduce the salt concentration, the Debye length increases according to $\lambda_{D}\propto c_{0}^{-1/2}$, and the conductance of the EDL becomes increasingly significant to the total conductance of the pore. Since the total concentration in the EDL $c_{+}+c_{-}>2c_{0}$, the relationship between ion concentration and conductance becomes sublinear; halving the ion concentration no longer yields half the ionic current, since there will still be a greater concentration of ions in the electrical double layer compared to in the bulk. As we lower the conductivity further, the EDL continues to expand until it fills the entire channel. At this point, no further reduction of the bulk concentration will reduce the current, since the channel will always be filled with exactly enough ions to screen the surface charge of the pore. This effect is known as ionic current saturation, since the current maintains fixed below a certain concentration value. Figure \ref{fig:Schoch2008conductance} shows an example of a plot of pore conductance versus ion concentration.
+			Ignoring electrical double layer effects, the conductance of an ion channel is proportional to the ion concentration in the solution; doubling the ion concentration exactly doubles the measured current. However, the presence of the electrical double layer breaks this perfect linear conductance relationship for two reasons. First, the integrated \textit{excess} ion count $\int_{0}^{EDL}=\left[\left(c_{+}+c_{-}\right)-2c_{0}\right]dy$ in the EDL layer is not guaranteed to be the same as the total ion concentration in the bulk; in fact, in most cases it is slightly higher, meaning the electrophoretic current in the EDL is slightly higher than in the bulk. Another important contribution to the measured current is the current from convection due to electroosmosis; because there is a net charge density in the fluid, electroosmosis will create a measurable ion current! In total, there are three terms that contribute to the total current measured in a channel, migration of ions in the bulk, migration of the integrated ion \textit{excess} in the EDL, and net convection of charge in the EDL due to electroosmosis. Without applying any equations, we can use what we learned about the EDL and some general logic to reason about what the current behavior should be in the limiting cases of very large ion concentration and very small ion concentration. The equation for the Debye-length is $\lambda_{D}\propto c_{0}^{-1/2}$; for very large ion concentration, the EDL should be negligible and therefore neither the effects of electroosmosis nor electrophoretic ion excess should be significant. At the other end of the scale, in the limit of nearly zero ions in the bulk we still must have charge neutrality in the pore, meaning a finite concentration of ions despite the bulk concentration being zero. In this case, the EDL fills the entire pore and the result is that the conductance is entirely due to the integrated excess and convective terms. This finite conductance at zero concentration is known as the \textit{saturation current}. Therefore, as we increase the length of the EDL we expect the conductance discrepancy, the difference in bulk conductance versus conductance due to the two surface effects, to increase. The end result of all this is that the conductance is a non-linear function of ion concentration at sufficiently low ion concentration; removing ions past some point does not further reduce the conductance of the channel! Consider a nanopore immersed in solution of two symmetric ions denoted $+$ and $-$ (symmetric means their mobilities, valencies, and bulk concentrations are equal) with electrophoretic mobility $\mu_{EP}$ and electroosmotic mobility $\mu_{EP}$. The following expression breaks down the total measured current into the three components described above:
+		
 			
-			The non-linearity in the conductance with ion concentration described above is due to a difference in the conductance values of the EDL, or `surface conductance' versus the conductance of the bulk solution. We can introduce a parameter that quantifies the relative contributions of surface conductance versus bulk conductance, the Dukhin number:
-			
-			\begin{equation} \label{eq:dukhin}
-				\frac{2\left(1+3m/z^{2}\right)}{\kappa a}\left(\cosh\frac{ze\zeta}{2k_{B}T}-1\right),
-				m=\frac{2\epsilon k_{b}^{2}T^{2}}{3\eta e^{2}D}.		
+			\begin{equation} \label{eq:totalconductance}
+				\begin{split}
+					I &= I_{\mathrm{bulk}}+I_{\mathrm{excess}}+I_{\mathrm{EO}} \\
+					I &= \int 2c_{0}\mu_{EP}EezdA + \int\left[c_{+}\left(z\right)+c_{-}\left(z\right)-2c_{0}\right]\mu_{EP}EezdA + \int\left[c_{+}\left(z\right)-c_{-}\left(z\right)\right]u_{\mathrm{EO}}\left(z\right)ezdA.
+				\end{split}
 			\end{equation}
-			
-			The second term in the top equation above is the contribution to surface conductance from electroosmosis, an effect described below.
-			
-			A simple model for the nanopore conductance $G$ for all electrolyte concentrations can be obtained by breaking down the total conductance into two terms, bulk conductance and surface conductance. Doing so, the total conductance $G$ takes on the formation
-			
-			\[ G=\left(\mu_{K^{+}}+\mu_{Cl^{-}}\right)n_{\textrm{KCl}}e\frac{R^{2}}{L}+2\mu_{K^{+}}\sigma_{s}\frac{R}{L}. \]
-			
-			
-
 			
 			Figure \ref{fig:Schoch2008conductance} shows a plot of the conductance versus solution concentration for a nanopore; the plot reveals a saturation at low solution concentration as expected from the preceding arguments. The saturation current is equal to the surface conductance term in the above equation.
 			
@@ -268,40 +309,40 @@
 		
 			
 			
-		\subsection{Electroosmosis}
-			
-			Ions migrate in externally applied electric fields, and ions of opposite polarity travel in opposite directions. When ions move, they tend to drag fluid along with them. In the bulk, this fact results in no net motion of fluid because for every anion that drags fluid towards the cathode, there is a cation that drags fluid towards the anode, and the two motions cancel each other out so that there is no net motion of fluid. However, as we've just learned there \textit{is} a net concentration of one ion polarity in the EDL, so we expect that an electric field applied parallel to a charged surface will induce motion of the fluid. This intuition turns out to be correct, and the effect is known as electroosmosis. Interestingly, although the effect originates due to the presence of the $\sim \SI{1}{nm}-$thick EDL, the induced fluid flow propogates well into the bulk, and electroosmosis is observable in micro- and even milli-sized systems. This result, while surprising, is due to the simple viscous coupling of the fluid at the EDL surface to the rest of the fluid.
-			
-			Because electroosmosis induces a general fluid flow, the effect couples with the motion of all unbound actors in the system, namely the ions species and any particles suspended in the solution. In typical nanopores, convection in the electroosmotic flow tends to be less pronounced than migration in the electric field. However, some lightly charged particles for instance will only experience a small force from the electric field (electrophoresis) compared to the drag force from the fluid moving electroosmotically, and their motion is therefore determined primarily by electroosmosis. For the case of ions, usually the electroosmotic convective velocity adds or subtracts only a small offset to their net total motion, which remains dominated by electrophoresis. However, recently it was shown that some types of channels exhibit frictionless flow of water, and in these cases the electroosmotic velocities can become very large. In these channels it is actually expected that electroosmotic offers a large, if not dominant contribution to the motion of ions in the system. One example of these special types of pores, carbon nanotube pores, will be discussed later in this dissertation.
-			
-			To understand electroosmosis, we look to the Navier-Stokes equations which describe the motion of fluids, and the Poisson-Boltzmann equation which yields the distribution of ions in the vicinity of the EDL. As an example, consider again an infinite charged plane with unit normal pointing in the $\hat{y}-$ direction, but this time with a constant electric field $\vec{E}$ applied parallel to its surface. The Navier-Stokes equation (eq \ref{eq:ns}) simplifies greatly in this case, and simply becomes
-			
-			\[ 0 = \eta\frac{\partial^{2}u}{\partial y^{2}}+\left[c_{+}\left(y\right)-c_{-}\left(y\right)\right]zeE_{ext}. \]
-			
-			The equation shows that there is a constant driving force which is proportional to the net charge in the solution (proportional to $c_{+}-c_{-}$) times the electric field $\vec{E}$. We identify this term with the electric force. The other term that balances the driving force is due to viscous forces between neighboring layers that have different $y-$ velocities $u$, i.e. due to velocity gradients perpendicular to the wall. In order to solve this equation, we can replace the charge density $\rho_{E}=ze\left(c_{+}-c_{-}\right)$ with the Laplacian of the scalar potential $\phi$, integrate twice, and apply the correct boundary conditions, that the velocity at the pore wall is 0 (the so-called `non-slip' boundary condition) and that the velocity gradients are 0 infinitely far from the wall.  Performing these steps, we find the fluid velocity equals 
-			
-			\[ u=\frac{\epsilon E_{ext}}{\eta}\left(\phi-\zeta\right), \]
-			
-			where $\phi_{0}$ is the electric potential immediately outside the surface charges on the pore wall. Interestingly, according to this equation the fluid velocity is proportional to the local electric potential in the screening layer, which is determined by solving the Poisson-Boltzmann equation (Eq. \ref{eq:pb}). Under the Debye-H\u ckel approximation of small surface potentials, the fluid velocity is zero at the walls, and exponentially approaches its bulk value as distance from the wall increases. This type of fluid flow profile is known as `plug flow', since the velocity is approximately constant everywhere except in the thin EDL where there are sharp velocity gradients. Since the potential in the bulk is equal to $\phi=0$, we find the bulk velocity to be equal to 
-			
-			\begin{equation} \label{eq:hs}
-				\begin{split}
-					u &= -\frac{\epsilon\zeta}{\eta}E_{ext} \\
-					u &= \mu_{EO}E_{ext},
-				\end{split}
-			\end{equation}
-			
-			a result known as the Helmholtz-Smoluchowski equation. The parameter $\mu_{EO}\equiv-\frac{\epsilon\zeta}{\eta}$ introduced is known as the electroosmotic mobility, and is the proportionality constant between the applied electrical field and the resulting fluid velocity. Typical values of the mobility are $\mu_{EO}=10^{-8} \left[m^{2}/V s\right]$, which for an electric field of $\SI{1}{V/\mu m^{2}}$ yields a fluid velocity of approximately $\SI{1}{cm/s}$.
-			
-			It is possible to experimentally observe the fluid flow velocity, for instance by tracking the motion of small particles that move in the fluid flow, and therefore Eq. \ref{eq:hs} provides a means for directly measuring the $\zeta-$potential.
+		
 			
 			
 
 			
 			
-		\subsubsection{Electrophoresis}
+		\subsubsection{Particle electrophoresis}
 			
-			Electrophoresis is the transport of a charged species in the presence of an electric field. On the one hand this effect is intuitive; charged objects experience forces in electric fields. On the other, we know that an EDL forms in the vicinity of a particle which screens the total charge. If we draw a box around the particle and its associated EDL, it has no net charge, and will therefore experience no force. How do we explain electrophoresis?
+			Electrophoresis is the transport of a charged particle in the presence of an electric field. The effect of electrophoresis can be derived much in the way electroosmosis was derived, but instead of considering the fluid flow velocity at the surface of the particle to be zero, we set it equal to the electrophoretic velocity. For particles with thin electrical double layers (Debye-H\u ckel approximation) and laminar flow (Stoke's flow), the particle velocity is
+			
+			\begin{equation} \label{eq:electrophoresis}
+				\begin{split}
+					\vec{u} &= \frac{\epsilon\vec{E}_{0}}{\eta}\phi_{0} \\
+					\vec{u} &= \mu_{\mathrm{EP}}=\frac{\epsilon\phi_{0}}{\eta}.
+				\end{split}
+			\end{equation}
+			
+			In equation \ref{eq:electrophoresis}, we've again introduced a proportionality factor between the applied electric field $E_{0}$ and the induced velocity $\vec{u}$; this factor is known as the electrophoretic mobility. However, these equations are derived under the assumption that the applied electric field does not perturb the distribution of ions in the electrical double layer, which is only true for small surface potentials. If this assumption is invalid, additional effects related to the redistribution of ions must be taken into account; the net effect is a retarding force on the particle that slows its velocity.
+			
+			Electrophoresis is an important effect in many applications involving particles. One useful application is that particle electrophoresis through a nanopore can be used to measure the zeta potential of a particle, related to its surface chemistry and chemical adsorption. An electric field is applied across a nanopore which is immersed in electrolyte solution containing ions and charged particles. Particles travel through the pore under electrophoresis, and the dwell time can be recorded using resistive pulse sensing or optical techniques. If the geometry of the pore is known, the dwell time can be related with the particle velocity, and the electric field strength can be determined as well. In this case, equation \ref{eq:electrophoresis} can be solved for the surface potential $\phi_{0}$, which is the same as its zeta-potential.
+			
+		\subsubsection{Particle electrophoresis + electroosmosis}
+			Transport of particles is in general a superposition of electrophoretic and electroosmotic effects. Combining the two, the velocity of a charged particle translocating through a charged pore is 
+			
+			\begin{equation} \label{eq:particlevelocity}
+				\begin{split}
+					v=\left(\mu_{EP}+\mu_{EO}\right)E, \\
+					v=\frac{\epsilon}{\eta}\left(\zeta_{\mathrm{particle}}-\zeta_{\mathrm{pore}}\right)E
+				\end{split}
+			\end{equation}
+			
+			In general the net velocity can be positive, negative, or zero depending on the relative sizes and signs of the electrophoretic mobility.
+
+
 
 			
 
