--- a/dissertation/chapter5.tex
+++ b/dissertation/chapter5.tex
@@ -1,4 +1,4 @@
-\graphicspath{{../images/ch4/}}	% Image directory
+\graphicspath{{../images/ch5/}}	% Image directory
 
 
 \chapter{Resistive pulse studies of cancer cell deformability}
@@ -13,19 +13,27 @@
 		
 		In order to measure the stiffness of an object, it must be subjected to constrained forces and its response measured. Probably the most straight forward way of doing this is by directly applying a mechanical force on the cell, for example by using an atomic force microscopy (AFM) probe to directly press on the cells and measure the resultant recoil force felt by the AFM's cantilever, which is directly related to the Young's modulus of the cell. Other similar methods exist, and while they are very accurate and easily interpretable, they suffer from an excruciatingly slow throughput. For instance, using AFM for cell deformation measurement can take a few minutes per cell. For cell applications a high throughput is necessary, and therefore these applications are not feasible for discovering cell population statistics.
 		
-		Another method of measuring cell deformability is with microfluidics platforms. Cells passing quickly through narrow constrictions are subjected to large, anisotropic hydrodynamic forces, and these forces can induce a measurable particle deformation. The advantage of this type of method is its extremely large throughput; rather than spending several minutes per particle as in measurements conducted with AFM, thousands of cells per second can be measured in microfluidic platforms. Even within the narrow field of microfluidic-based deformability cytometry, there are multiple types of platforms. Probably the most conceptually simple is a standard microfluidic channel that tightly confines cells passing through it. Due to variations in the hydrodynamic forces around the particle, it will deform even in a uniformly shaped channel.
+		Another method of measuring cell deformability is with microfluidics platforms. Cells passing quickly through narrow constrictions are subjected to large, anisotropic hydrodynamic forces, and these forces can induce a measurable particle deformation. The advantage of this type of method is its extremely large throughput; rather than spending several minutes per particle as in measurements conducted with AFM, thousands of cells per second can be measured in microfluidic platforms. Even within the narrow field of microfluidic-based deformability cytometry, there are multiple types of platforms. Probably the most conceptually simple is a standard microfluidic channel that tightly confines cells passing through it. Due to anisotropies in the hydrodynamic stresses and strains around the particle, it will deform even in a uniformly shaped channel.
 		
-		In traditional microfluidic methods of measuring cell deformability, direct imaging is used to determine the cell shape across different frames in the video, which corresponds to the hydrodynamic load it is under. However, for the high throughputs that are the reason why people use microfluidics, camera imaging must be performed very quickly. This requires the use of a high-speed camera used in conjunction with an optical microscope, usually shooting at a minimum of $\SI{10000}{fps}$. There are two primary disadvantages in introducing the camera to the setup: first, the camera itself adds a large cost to the apparatus, and will likely dwarf the price of any other component in the deformability cytometer. Second, imaging data is inherently highly multidimensional and computationally expensive to analyze. As a result, online analyses conducted during the run of the experiment are usually not possible at the flow rates that these experiments operate at. While the data can still be stored, processed, and analyzed later, offline analysis does not allow for real-time separation, one of the most highly desirable applications of this type of metrology.
+		In traditional microfluidic methods of measuring cell deformability, direct imaging is used to determine the cell shape across different frames in the video, which corresponds to the hydrodynamic load it is under. However, for the high throughputs that are the reason why people use microfluidics, camera imaging must be performed very quickly. This requires the use of a high-speed camera used in conjunction with an optical microscope, usually shooting at a minimum of $\SI{10000}{fps}$. When combined with an optical microscope, such high-speed cameras are capable of capturing cell deformations with high spatial and temporal resolution, and are even capable of resolving the cells' deformation dynamics \cite{DiCarlo2017}. Currently high-speed camera imaging is by far the most popular method of capturing cell deformations, but it comes with two serious disadvantages. First, the camera itself adds a large cost to the apparatus, and will likely dwarf the price of any other component in the deformability cytometer. Second, imaging data is inherently highly multidimensional and computationally expensive to analyze. As a result, online analyses conducted during the run of the experiment are usually not possible at the flow rates that these experiments operate at. While the data can still be stored, processed, and analyzed later, offline analysis does not allow for real-time separation, one of the most highly desirable applications of this type of metrology.
 		
 		Instead of using camera imaging, one can instead imagine trying to employ resistive pulse (RP) to measure the deformability of particles. In terms of practicality, RP is far more computationally light than imaging data, as the following order of magnitude estimate shows. Passage through a deformability cytometry system may consist of $\sim100$ frames, each with a resolution of perhaps $100x50$ 8-bit grayscale valued pixels. As a result, the entire translocation is described by $\SI{500}{kB}$ worth of data. At a rate of $1000$ particles per second, this corresponds to a raw data throughput of $\SI{500}{MB/s}$ of data that must be analyzed. Finally, in a common image processing algorithm the number of computations performed on each pixel is probably greater than one; identifying the shape of an object in a frame certaintly consists of multiple image processing steps performed serially. Although this is just an estimate, it conveys the point that high-speed imaging is not amenable to online analysis, especially at the throughputs that are desired for these types of calculations. On the other hand, consider a resistive pulse analysis: under the same criteria described above, an RP data stream being sampled at $\SI{1}{MHz}$ will consist of a data throughput of only $\SI{1}{MB/s}$, a factor of $500$ decrease.
 		
-		While it is apparent that resistive pulse is computationally cheaper than imaging analysis, it is most important to demonstrate that deformability can actually be measured via RP sensing. In chapter 4 of this dissertation, we discussed the equations for the resistive pulse amplitudes of ellipsoidal objects. For cells that are spheroidal in their unloaded state, ellipsoids are reasonable geometries to expect for the deformation shape in the loaded state, at least as an approximation. If we consider a straight ion conducting channel with an ellipsoidal particle inside it, the aspect ratio and orientation of the particle greatly affects the ionic resistance of the system. To first order, the resistance of the channel with an ellipsoidal particle occupying it is given by the following equation:
+		While it is apparent that resistive pulse is computationally cheaper than imaging analysis, it is most important to demonstrate that deformability can actually be measured via RP sensing. In chapter 4 of this dissertation, we discussed the equations for the resistive pulse amplitudes of ellipsoidal objects. For cells that are spheroidal in their unloaded state, ellipsoids are reasonable geometries to expect for the deformation shape in the loaded state, at least as an approximation. If we consider a straight ion conducting channel with an ellipsoidal particle inside it, the aspect ratio and orientation of the particle greatly affects the ionic resistance of the system. Under the assumption that the particles take on ellipsoidal geometries, the shapes will be described as being prolate, oblate, or spherical with respect to the channel's axis. Oblate geometries correspond to a flattening along the channel's axis, and prolate geometries are an extension along the channel's axis. The difference in the measured resistive pulse amplitude of these particles is given by the following equation:
 		
-		\begin{equation} \label{eq:Rclassical}
-			R=\rho\int_{z=0}^{z=L}\frac{\mathrm{dz}}{A\left(z\right),
+		\begin{equation} \label{eq:ellipsoiddI}
+			\frac{\Delta I}{I_{p}}=f_{\parallel}\frac{v}{V},
 		\end{equation}
 		
-		where $R$ is the resistance of the solution between the electrodes (ignoring the bulk resistance, which is assumed negligible compared to the channel resistance), $z$ is the axial distance, $L$ is the length of the channel, and $A\left(z\right)$ is the area of the annulus of solution contained at point $z$. In reality, electrostatic boundary conditions at the channel and particle surfaces must be taken into account for the most accurate solution, but Eq. \ref{eq:Rclassical} yields an estimate that will demonstrate the differences between the three varieties of ellipsoidal particles. 
+		where $v$ and $V$ are the volume of the particle and channel, respectively, and $f_{\parallel}$ is a constant known as the `shape-factor', which depends on the aspect ratio of the ellipsoid. 
+		
+		\begin{figure}
+			\includegraphics[width=0.5\textwidth]{dIellipsoid.png}
+			\caption{\textbf{Resistive pulse amplitude $\Delta I/I_{p}$ for equal volume spheroidal objects relative to a sphere.} The polar axis of the particle is aligned with the channel's axis, so that oblate geometries correspond to motion along the channel axis. The values come from equation \ref{eq:ellipsoiddI} when the correct shape factor $f_{\parallel}$ is applied.}
+		\end{figure}
+
+		
+		For spheres, $f_{\parallel}=1$, and for prolate and oblate spheroids, $f_{\parallel}<1$ and $f_{parallel}>1$, respectively. Figure \ref{fig:dIellipsoid} shows plots of the RP amplitude $\Delta I/I_{p}$ for ellipsoids of the same volume but different aspect ratios, relative to a sphere. The plot reveals that even for modest deformation, for instance a stretching ratio of $2/3$, a mildly oblate ellipsoid, the increase in $\Delta I/I$ is nearly $30\%$. Similarly, the current $\Delta I/I$ changes for prolate geometries, although to a lesser degree.
 
 		
 		
