--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -111,6 +111,7 @@
 \include{chapter2}
 \include{chapter3}
 \include{chapter4}
+\include{chapter5}
 
 
 % These commands fix an odd problem in which the bibliography line
