--- a/dissertation/chapter3.tex
+++ b/dissertation/chapter3.tex
@@ -2,7 +2,7 @@
 
 
 \chapter{Experimental study of ion conductance property of hybrid conductor-insulator nanopores}
-
+\label{chap:sin}
 	
 
 	\section{Background}
